@@ -1,5 +1,7 @@
 #' @param keep.pred [\code{logical(1)}]\cr
-#'   Keep the data in the \code{pred} slot of the results.
-#'   If you do many experiments these informations might only increase the size of your result file without being essential for your analyisis so you want to set this value on \code{FALSE}.
+#'   Keep the prediction data in the \code{pred} slot of the result object.
+#'   If you do many experiments (on larger data sets) these objects might unnecessarily increase
+#'   object size / mem usage, if you do not really need them.
+#'   In this case you can this argument to \code{FALSE}.
 #'   Default is \code{TRUE}.
 
